# book_recommendations

./: .env.example  .gitignore  app.py  pyproject.toml
agents/: base_agent.py  book_agent.py  cross_domain_agent.py
controllers/: recommendation_controller.py
docs/: architecture.md  dev_notes.md  workflow_analysis.md  workflow_spec.md
services/: recommendation_service.py
views/: book_recommendations_view.py  cross_domain_view.py
