[project]
name = "book-recommendations"
version = "0.1.0"
description = "Book recommendation system using AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "langchain-openai>=0.0.8",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

[tool.setuptools]
packages = [
    "agents",
    "controllers",
    "services",
    "views"
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"
